; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_726.c_usage.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_726.c_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [58 x i8] c"USAGE: 101_ncat.exe Target VulnIP VulnPORT GayIP GayPORT\0A\00", align 1
@.str.1 = private unnamed_addr constant [41 x i8] c"TARGETS:                               \0A\00", align 1
@.str.2 = private unnamed_addr constant [45 x i8] c"      [+] 1. Win2k SP4  Server English  (*)\0A\00", align 1
@.str.3 = private unnamed_addr constant [45 x i8] c"      [+] 1. Win2k SP4  Pro.   English  (*)\0A\00", align 1
@.str.4 = private unnamed_addr constant [45 x i8] c"      [+] 2. WinXP SP1  Pro.   English  (*)\0A\00", align 1
@.str.5 = private unnamed_addr constant [45 x i8] c"      [+] 2. WinXP SP1a Pro.   English  (*)\0A\00", align 1
@.str.6 = private unnamed_addr constant [45 x i8] c"      [+] 2. WinXP SP2  Pro.   English  (*)\0A\00", align 1
@.str.7 = private unnamed_addr constant [38 x i8] c"NOTE:                               \0A\00", align 1
@.str.8 = private unnamed_addr constant [53 x i8] c"      The exploit reverse a cmd to GayIP:GayPORT :>\0A\00", align 1
@.str.9 = private unnamed_addr constant [35 x i8] c"      A wildcard (*) mean Tested.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usage(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i32 @printf(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str, i64 0, i64 0))
  %4 = call i32 @printf(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.1, i64 0, i64 0))
  %5 = call i32 @printf(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.2, i64 0, i64 0))
  %6 = call i32 @printf(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.3, i64 0, i64 0))
  %7 = call i32 @printf(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.4, i64 0, i64 0))
  %8 = call i32 @printf(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.5, i64 0, i64 0))
  %9 = call i32 @printf(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.6, i64 0, i64 0))
  %10 = call i32 @printf(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.7, i64 0, i64 0))
  %11 = call i32 @printf(i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str.8, i64 0, i64 0))
  %12 = call i32 @printf(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.9, i64 0, i64 0))
  ret void
}

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
